--- a/login_normal.css
+++ b/login_normal.css
@@ -9,6 +9,10 @@
 .Sweetpotao-heder-right{
     justify-content: space-between;
 }
+img:hover,img:active{
+    width: 120px;
+    height: 120px;
+}
 .container{
     padding: 25px;   
     background-color: whitesmoke;  
