--- a/main-shop-normal.css
+++ b/main-shop-normal.css
@@ -9,4 +9,55 @@
 .Sweetpotao-heder-right{
     justify-content: space-between;
 }
+.container{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 auto;
+}
+.container-grid{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    gap: 20px;
+    position: relative;
+    align-items: center;
+}
+.Sweetpotato-footer{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    background-color: #DD5757;
+}
+.card{
+    margin: auto;
+    max-width: 300px;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    border-radius: 20px;
+    border: 1px solid #ddd;
+    box-shadow: 0px 2px 4px rgb(0 0 0 / 10%);
+    position: relative;
+    background-color: white;
+}
+.img-item{
+    border-radius: 20px 20px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+}
+.img-item img{
+    height: 100%;
+    width: 100%;
+    display: block;
+    background-color: #ddd;
+    margin: 20px;
+}
+.Sweetpotato-header img:hover,.Sweetpotato-header img:active{
+    width: 120px;
+    height: 120px;
+}
 
